# python-for-mechanical-engineers

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publishdocs.yml
deployment/ci/: index.html
deployment/hosted-pypi/: index.html
development/formatting-code/: index.html
development/project-structure/: index.html
development/testing-code/: index.html
development/typing-code/: index.html
development/vs-code-new/: index.html
docs/: index.md
docs/development/: project-structure.md  vs-code-new.md
docs/environment/: installing-tools.md
environment/getting-started/: index.html
environment/installing-tools/: index.html
search/: search_index.json
