[tool.poetry]
name = "python-for-mechanical-engineers"
version = "0.1.0"
description = ""
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
